# logsearcher

./: .gitignore  LICENSE  README.md  docker-compose.yml  init-user-db.sh  logs.sql  requirements.txt
db_init/: init-access-node.sh
ingest/ingest-rust/: Cargo.toml
ingest/ingest-rust/src/: consumer.rs  generate-logs.py  producer.rs
logsearcher/: README.md  package-lock.json  package.json  vite.config.ts
logsearcher-server/: Cargo.toml
logsearcher-server/src/: handler.rs  main.rs  model.rs  route.rs
logsearcher/src/: App.vue
logsearcher/src/components/: HelloWorld.vue  LogItem.vue  VBar.vue
