[package]
name = "logsearcher-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
chrono = {version="0.4.31", features=["serde"]}
deadpool-postgres = "0.11.0"
dotenv = "0.15.0"
serde = {version="1.0.193", features=["derive"]}
serde_json = "1.0.108"
tokio = {version="1.35.0", features=["full"]}
tokio-postgres = {version="0.7.10", features=["with-chrono-0_4", "with-serde_json-1"]}
tower-http = {version="0.5.0", features = ["cors"] }
